# privacy_watermark_codec

./: .gitattributes  .gitignore  Cargo.toml  GITHUB_UPLOAD_COMMANDS.md  LINUX_ARM64_BUILD.md  PROJECT_OVERVIEW.md  README.md  README.zh-CN.md  UPDATED_FILES.txt  directory_structure.txt  index.html  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: release.yml
crates/watermark-core/: Cargo.toml
crates/watermark-core/src/: bch.rs  crypto.rs  dct.rs  error.rs  fingerprint.rs  hamming.rs  keyfile.rs  lib.rs  payload.rs  scan.rs  sync.rs  watermark.rs
crates/watermark-core/tests/: roundtrip.rs
scripts/: appimage-diagnostics.mjs  appimage-prefetch.mjs  appimage-tools.mjs  build-release.mjs  check-env.ps1  check-env.sh  ensure-linux-desktop-entry.mjs  generate-ffmpeg-manifest.mjs  linux-desktop-entry.mjs  preflight-tauri.mjs  tauri-dev.mjs
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128.rgba  256x256.rgba  icon.icns
src-tauri/linux/: appimage-lib64-placeholder  com.privacywatermark.codec.desktop  com.privacywatermark.codec.metainfo.xml  desktop-template.desktop  package-postinstall.sh  package-postremove.sh
src-tauri/src/: cancellation.rs  commands.rs  desktop_entry.rs  evidence.rs  ffmpeg.rs  launch.rs  lib.rs  main.rs  media.rs  models.rs  progress.rs  release.rs  storage.rs  video.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: BrandMark.vue
