[package]
name = "watermark-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blind DCT watermarking core for Privacy Watermark Codec"

[dependencies]
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff"] }
pbkdf2 = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
